crates/cli/tests/snapshots/snapshot_tests__sarif_health_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_health_sarif_version(&json_str)
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "fallow",
          "version": "[VERSION]",
          "informationUri": "https://github.com/fallow-rs/fallow",
          "rules": [
            {
              "id": "fallow/high-cyclomatic-complexity",
              "shortDescription": {
                "text": "Function has high cyclomatic complexity"
              },
              "fullDescription": {
                "text": "McCabe cyclomatic complexity exceeds the configured threshold. Cyclomatic complexity counts the number of independent paths through a function (1 + decision points: if/else, switch cases, loops, ternary, logical operators). High values indicate functions that are hard to test exhaustively."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#cyclomatic-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/high-cognitive-complexity",
              "shortDescription": {
                "text": "Function has high cognitive complexity"
              },
              "fullDescription": {
                "text": "SonarSource cognitive complexity exceeds the configured threshold. Unlike cyclomatic complexity, cognitive complexity penalizes nesting depth and non-linear control flow (breaks, continues, early returns). It measures how hard a function is to understand when reading sequentially."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#cognitive-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/high-complexity",
              "shortDescription": {
                "text": "Function exceeds both complexity thresholds"
              },
              "fullDescription": {
                "text": "Function exceeds both cyclomatic and cognitive complexity thresholds. This is the strongest signal that a function needs refactoring — it has many paths AND is hard to understand."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#complexity-metrics",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/refactoring-target",
              "shortDescription": {
                "text": "File identified as a high-priority refactoring candidate"
              },
              "fullDescription": {
                "text": "File identified as a refactoring candidate based on a weighted combination of complexity density, churn velocity, dead code ratio, fan-in (blast radius), and fan-out (coupling). Categories: urgent churn+complexity, break circular dependency, split high-impact file, remove dead code, extract complex functions, reduce coupling."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#refactoring-targets",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/untested-file",
              "shortDescription": {
                "text": "Runtime-reachable file has no test dependency path"
              },
              "fullDescription": {
                "text": "A file is reachable from runtime entry points but not from any discovered test entry point. This indicates production code that no test imports, directly or transitively, according to the static module graph."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/untested-export",
              "shortDescription": {
                "text": "Runtime-reachable export has no test dependency path"
              },
              "fullDescription": {
                "text": "A value export is reachable from runtime entry points but no test-reachable module references it. This is a static test dependency gap rather than line coverage, and highlights exports exercised only through production entry paths."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/production-never-called",
              "shortDescription": {
                "text": "Function tracked in production coverage was never invoked"
              },
              "fullDescription": {
                "text": "V8 tracked this function (it was parsed and prepared for execution) but it was never called during the observed production coverage window. Combined with static reachability analysis, a never-called function is the highest-confidence delete signal fallow emits."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#production-coverage",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/production-coverage-unavailable",
              "shortDescription": {
                "text": "Production coverage could not be resolved for this function"
              },
              "fullDescription": {
                "text": "The function could not be matched to a V8-tracked coverage entry. Common causes: the function lives in a worker thread (separate V8 isolate), it is lazy-parsed and never reached the JIT tier, or its source map did not resolve to the expected source path. This is advisory, not a dead-code signal."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#production-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/production-coverage",
              "shortDescription": {
                "text": "Production coverage finding"
              },
              "fullDescription": {
                "text": "Generic production-coverage finding for states other than never-called and coverage-unavailable. Includes `called` entries surfaced for completeness when the sidecar emits them and the forward-compat `unknown` sentinel."
              },
              "helpUri": "https://docs.fallow.tools/explanations/health#production-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "fallow/high-complexity",
          "level": "warning",
          "message": {
            "text": "'processData' has cyclomatic complexity 25 (threshold: 20) and cognitive complexity 30 (threshold: 15)"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/complex.ts"
                },
                "region": {
                  "startLine": 42,
                  "startColumn": 1
                }
              }
            }
          ]
        }
      ]
    }
  ]
}
